# STATlee

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CREDITS.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.py  billing.py  config.py  datatools.py  docker-compose.yml  extensions.py  llm.py  models.py  prompts.py  pyproject.toml  requirements-dev.txt  requirements.txt  runner.Dockerfile  sandbox.py  storage.py  tailwind.config.js  wsgi.py
.autopilot/: AUTONOMY.md  BACKLOG.md  DECISIONS.md  MILESTONES.md  PLAN.md  phase8-test-log.txt
.claude/: launch.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLOSEOUT.md  CREDITS.md  DEPLOYMENT_PLAYBOOK.md  GEMINI.md  IMPLEMENTATION_PLAN.md  PRICING.md  README.md  SECURITY_AUDIT.md
docs/examples/: README.md  sample_survey.csv
migrations/: env.py
routes/: __init__.py  analyze.py  auth.py  converse.py  datasets.py  misc.py
static/css/: app.css  tailwind.css
static/js/: analyze.js  (+5 more)
statlee/: __init__.py  app.py  billing.py  cli.py  codecheck.py  config.py  datatools.py  extensions.py  identity.py  llm.py  models.py  prompts.py  sandbox.py  storage.py  usage.py
templates/: index.html  landing.html
tests/: conftest.py  test_analyze_routes.py  test_auth.py  test_billing.py  test_cli.py  test_codecheck.py  test_config.py  test_converse_and_misc.py  test_datasets_routes.py  test_datatools.py  test_identity.py  test_llm.py  test_migrations.py  test_no_emoji.py  test_prompt_caps.py  test_prompts.py  test_sandbox.py  test_security.py  test_storage.py  test_ui_markup.py  test_usage.py
(+25 files in other folders)
